--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Channing Robertson</title>
+    <title>Rewind: A Coding Project By Channing Robertson</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
 <!--=== Nav Section ===-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/4.png" class="d-inline-block align-text-top" width="30" height="24"> App Name Here</a>
+        <a class="navbar-brand" href="#"><img src="img/4.png" class="d-inline-block align-text-top" width="30" height="24"> REWIND</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="code.html">The Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                    <a class="nav-link" target="_blank" href="https://github.com/Tunesmithus/Rewind">Git Repo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https://www.techwithchan.com/">About Me</a>
@@ -55,7 +55,7 @@
        <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold 1h-1 mb-3">App Name: A Coding Project</h1>
+                    <h1 class="display-5 fw-bold 1h-1 mb-3">REWIND: A Coding Project</h1>
                     <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops. Write a  
                         program that displays the numbers from 0 to 100.  
                         Display the even numbers in <strong>BOLD.</strong> </h4>
@@ -83,8 +83,9 @@
                         </div>
                     </h5>
                 </div>
-            <div class="col">
-                    <img src="img/ChanningRobertson.svg" alt="App Logo" class="img-fluid center-block d-block mx-auto" width="700" height="500" >
+                <!--App Logo Goes Here-->
+            <div class="col d-flex align-content-center">
+                    <img src="img/ChanningRobertson.svg" alt="Rewind Logo" class="img-fluid center-block d-block mx-auto" width="700" height="500" >
             </div>
             </div>
         </div>
@@ -103,8 +104,8 @@
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
                         <div class="col social"><a href="https://www.linkedin.com/in/channing-robertson-09376248/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                        <div class="col social"><a href="https://github.com/Tunesmithus" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://github.com/Tunesmithus/Rewind" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://twitter.com/85DriveInn" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
                         <div class="col social"><a href="#" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></div>
                     </div>
                 </div>
