--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Channing Robertson</title>
+    <title>REWIND: A Coding Project By Channing Robertson</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
     <!--=== Nav Section ===-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/4.png" class="d-inline-block align-text-top" width="30" height="24"> App Name Here</a>
+            <a class="navbar-brand" href="index.html"><img src="img/4.png" class="d-inline-block align-text-top" width="30" height="24"> REWIND</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/Tunesmithus/Rewind">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://www.techwithchan.com/">About Me</a>
@@ -52,8 +52,36 @@
     </nav>
     <!--=== Main Section ===-->
     <main class="flex-shrink-0">
-        <div class="container">
-
+        <div class="container mt-5">
+            <div class="row row-cols-1 row-cols-lg-2">
+                <div class="col">
+                    <h1 class="display-5 fw-bold lh-1 mb-3">
+                        REWIND: A Coding Project
+                    </h1>
+                    <h4 class="lead pb-3">
+                        Run it back. A javascript coding exercise using arrays. Write a  
+                        program that displays a string in reverse.  
+                    </h4>
+                    </h4>
+                </div>
+                <div class="col">
+                    <h5 class="border-1 border-bottom border-danger">Enter A String To Reverse</h5>
+                    <form class="row gx-3 gy-2">
+                        <div class="col mb-2">
+                            <input id="userString" type="text" class="form-control" placeholder="Enter A String" aria-label="Enter A String">
+                        </div>
+                        <div class="col-12">
+                            <button type="button" id="btnSubmit" class="btn btn-danger">Reverse Me</button>
+                        </div>
+                        <div class="alert alert-success mt-5 invisible fade show" id="alert" role="Alert">
+                            <h4 class="alert-heading">Well Done!</h4>
+                            <hr/>
+                            <p class="mb-0" id="msg"></p>
+                            <!--Insert a Message here-->
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
     <!--=== Footer Section ===-->
@@ -68,9 +96,9 @@
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://www.linkedin.com/in/channing-robertson-09376248/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://github.com/Tunesmithus/Rewind" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://twitter.com/85DriveInn" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
                         <div class="col social"><a href="#" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></div>
                     </div>
                 </div>
@@ -78,9 +106,14 @@
         </div>
 
     </footer>
+
+    <!--Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
-   
+    <script src="js/site.js"></script>
+   <script>
+        document.getElementById("btnSubmit").addEventListener("click", getValue);
+   </script>
 </body>
 </html>
