--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Channing Robertson</title>
+    <title>REWIND: A Coding Project By Channing Robertson</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +25,7 @@
     <!--=== Nav Section ===-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/4.png" class="d-inline-block align-text-top" width="30" height="24"> App Name Here</a>
+            <a class="navbar-brand" href="#"><img src="img/4.png" class="d-inline-block align-text-top" width="30" height="24"> REWIND</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
                         <a class="nav-link active" aria-current="page" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/Tunesmithus/Rewind">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://www.techwithchan.com/">About Me</a>
@@ -53,20 +53,60 @@
     </nav>
     <!-- Main Section -->
     <main class="flex-shrink-0">
-        <div class="container py-5 px-5">
-            <h2 class="border-1 border-bottom border-dark">The Code for App Name</h2>
+        <div class="container py-5 px-5 mt-5">
+            <h2 class="border-1 border-bottom border-dark">The Code for REWIND</h2>
             <div class="row row-cols-1 row-cols-lg-2">
                 <div class="col-lg-8">
                     <pre class="line-numbers"><code class="language-javascript">
-                        //call hello world
-                        function helloworld(){
-                            alert("hello world");
+                        //Get the string from page 
+                        //Controller function
+                        function getValue(){
+
+                            document.getElementById("alert").classList.add("invisible");
+
+                            let userString = document.getElementById("userString").value;
+
+                            let revString = reverseString(userString);
+
+                            displayString(revString);
+
+                        }
+
+
+                        //Reverse the string
+                        //logic function
+                        function reverseString(userString){
+
+                            let reverseString = [];
+
+                            //reverse a string using a for loop
+                            for (let index = userString.length - 1; index > 0; index--) {
+
+                                reverseString += userString[index];
+                                
+                            }
+
+                            return reverseString;
+
+                        }
+
+
+                        //Display reversed string to user
+                        // View Function
+                        function displayString(reverseString){
+
+                            //write to the page
+                            document.getElementById("msg").innerHTML = `Your string reversed is: ${reverseString}`;
+
+                            //show the alert box
+                            document.getElementById("alert").classList.remove("invisible");
+
                         }
                     </code>
                     </pre>
                 </div>
                 <div class="col-lg-4">
-                    <p>The code is structed in one funtion.</p>
+                    <p>The code is structed in one function.</p>
                     <h5>Hello World</h5>
                     <p> Hello World is a function that displays an alert with a message of "Hello World"</p>
                 </div>
@@ -85,9 +125,9 @@
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://www.linkedin.com/in/channing-robertson-09376248/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://github.com/Tunesmithus/Rewind" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://twitter.com/85DriveInn" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
                         <div class="col social"><a href="#" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></div>
                     </div>
                 </div>
