--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <!--App Logo Goes Here-->
             <div class="col d-flex align-content-center">
-                    <img src="img/ChanningRobertson.svg" alt="Rewind Logo" class="img-fluid center-block d-block mx-auto" width="700" height="500" >
+                    <img src="img/Rewind.svg" alt="Rewind Logo" class="img-fluid center-block d-block mx-auto" width="700" height="500" >
             </div>
             </div>
         </div>
