Updated Code description

--- a/code.html
+++ b/code.html
@@ -106,9 +106,20 @@
                     </pre>
                 </div>
                 <div class="col-lg-4">
-                    <p>The code is structed in one function.</p>
-                    <h5>Hello World</h5>
-                    <p> Hello World is a function that displays an alert with a message of "Hello World"</p>
+                    <p>The code is structured in three functions.</p>
+                    <div>
+                        <h5>Function getValue</h5>
+                        <p> The getValue function is the controller function of the app.  It does three tasks.  This function takes in the input string value from user.  This value is then passed to the reverseString function as a parameter.  Finally the displayString function is called with reverseString function passed into it as a parameter </p>
+                    </div>
+                    <div>
+                        <h5>Function reverseString</h5>
+                        <p> The reverseString function uses a "for loop" to iterate through a string, however this iteration is performed in reverse by starting with the last index position and decrementing each loop.</p>
+                    </div>
+                    <div>
+                        <h5>Function displayString</h5>
+                        <p>The displayString function displays the string that was input from user in reverse order on the screen along with a alert.</p>
+                    </div>
+                    
                 </div>
             </div>
         </div>
